@startuml

interface Runnable {

    + run()
}

class ReadResponseOfAppointmentRequestGUI {

    + start()
    + main()
}

class ReadResponseOfAppointmentRequestController {

        - btnAccept;
        - btnCancel;
        - lstSchedule;
        - txtScheduleMessage;
        - txtReason;
        - btnReject;

        + acceptRequest()
        + rejectRequest()
        + cancel(ActionEvent event)
        + getScheduleList()
        + initialize()
        + sendNotificationToAgent()
}

class Schedule {

    - name
    - phoneNumber;
    - announcementDTO
    - day
    - beginHour
    - endHour
    - noteFromAgent
    - status
    - agentAproved
    - clientApproval
    - noteFromClient
}

class Repositories {

    + scheduleRepository
}

class ScheduleRepository {

    - ScheduleList
    + saveSchedule()
    + validateSchedule()
    + addSchedule()
    + getScheduleList()
}


ReadResponseOfAppointmentRequestGUI ..> ReadResponseOfAppointmentRequestController
ReadResponseOfAppointmentRequestController ..> Repositories
Repositories ..> ScheduleRepository
ScheduleRepository -right-> Schedule
Application -left-|> ReadResponseOfAppointmentRequestGUI
Runnable -right-|> ReadResponseOfAppointmentRequestGUI

@enduml